[gd_scene load_steps=22 format=3 uid="uid://cr71vbrmc2m6t"]

[ext_resource type="Script" path="res://scripts/menu_merchant.gd" id="1_v7em4"]
[ext_resource type="FontFile" uid="uid://b13xmp6wu4ea" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/6 Font/CraftPixNet Survival Kit.otf" id="2_bsqvj"]
[ext_resource type="Texture2D" uid="uid://7e6qicro5c8o" path="res://UI/sem org/2 Bars/Band2_on.png" id="3_dmibo"]
[ext_resource type="Texture2D" uid="uid://y6govco4twv7" path="res://UI/sem org/2 Bars/Band2_off.png" id="4_8psce"]
[ext_resource type="Texture2D" uid="uid://bmro5omyyrlef" path="res://images/one_0108_v01.png" id="5_h533h"]
[ext_resource type="Texture2D" uid="uid://4kypf3twlls3" path="res://UI/sem org/3 Icons/Icons_14.png" id="6_h2o4l"]
[ext_resource type="PackedScene" uid="uid://gigb868grykh" path="res://cenas/item_spec.tscn" id="7_1qnbk"]
[ext_resource type="Texture2D" uid="uid://c5r3s8tesyi7i" path="res://UI/sem org/2 Bars/Button_on.png" id="8_c0l5p"]
[ext_resource type="Texture2D" uid="uid://cp23jmph3me7" path="res://CharacterSprites/Arms/swords/Sword_1.png" id="8_dr33g"]
[ext_resource type="PackedScene" uid="uid://cdlhjfru12f0w" path="res://cenas/coins.tscn" id="8_n1i8u"]
[ext_resource type="Texture2D" uid="uid://b3foyophbvfvd" path="res://UI/sem org/3 Icons/Icons_15.png" id="10_2bjjs"]
[ext_resource type="Texture2D" uid="uid://bol1st4w0cb8q" path="res://CharacterSprites/Arms/shields/shield_1.png" id="10_2orem"]
[ext_resource type="Texture2D" uid="uid://c82gjhqvac6y2" path="res://UI/craftpix-679811-materials-for-crafting-pixel-art-icons/PNG/Background/Icon5.png" id="10_vlkxo"]
[ext_resource type="Texture2D" uid="uid://dw1qn7awwyrm4" path="res://CharacterSprites/Arms/shields/shields_upgraded/2/shield_1.png" id="11_uy8d1"]

[sub_resource type="LabelSettings" id="LabelSettings_irua0"]
font = ExtResource("2_bsqvj")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o8dq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkw6o"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hf14"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_qlgqn"]
font = ExtResource("2_bsqvj")
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lw6mx"]
font = ExtResource("2_bsqvj")
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_36vvr"]
font = ExtResource("2_bsqvj")
shadow_color = Color(0, 0, 0, 1)

[node name="MenuMerchant" type="CanvasLayer"]
script = ExtResource("1_v7em4")

[node name="Container" type="Panel" parent="."]
offset_left = 127.0
offset_top = 53.0
offset_right = 453.0
offset_bottom = 257.0

[node name="Weapons" type="Control" parent="Container"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 325.0
offset_bottom = 203.0

[node name="Arm" type="Control" parent="Container/Weapons"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="TextureButton" parent="Container/Weapons/Arm"]
layout_mode = 0
offset_left = 14.0
offset_top = 59.0
offset_right = 64.0
offset_bottom = 71.0
texture_normal = ExtResource("3_dmibo")
texture_pressed = ExtResource("4_8psce")
stretch_mode = 0

[node name="Text" type="Label" parent="Container/Weapons/Arm/Button"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 12.0
text = "EQUIP"
label_settings = SubResource("LabelSettings_irua0")
horizontal_alignment = 1

[node name="Band2Off" type="Sprite2D" parent="Container/Weapons/Arm"]
position = Vector2(38.5, 38)
scale = Vector2(1.65625, 3.33333)
texture = ExtResource("4_8psce")

[node name="sword" type="Sprite2D" parent="Container/Weapons/Arm"]
position = Vector2(38.75, 32.5)
scale = Vector2(2.16667, 1.59524)
texture = ExtResource("5_h533h")
hframes = 17
vframes = 6

[node name="Buttons" type="Panel" parent="Container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4o8dq")

[node name="StartWave" type="Button" parent="Container/Buttons"]
layout_mode = 0
offset_left = 110.0
offset_top = 46.0
offset_right = 216.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_bsqvj")
theme_override_styles/focus = SubResource("StyleBoxFlat_tkw6o")
text = "START WAVE"
flat = true

[node name="weaponsOption" type="Button" parent="Container/Buttons"]
layout_mode = 0
offset_left = 110.0
offset_top = 69.0
offset_right = 216.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "WEAPONS
"
flat = true

[node name="Build" type="Button" parent="Container/Buttons"]
layout_mode = 0
offset_left = 110.0
offset_top = 94.0
offset_right = 216.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "BUILD
"
flat = true

[node name="Leave" type="Button" parent="Container/Buttons"]
layout_mode = 0
offset_left = 133.0
offset_top = 149.0
offset_right = 196.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "LEAVE
"
flat = true

[node name="Update" type="Button" parent="Container/Buttons"]
layout_mode = 0
offset_left = 131.0
offset_top = 122.0
offset_right = 197.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "ANVIL
"
flat = true

[node name="ItemsContainer" type="GridContainer" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 5

[node name="ItemSpec" parent="Container" instance=ExtResource("7_1qnbk")]
visible = false
layout_mode = 0
offset_left = 170.0
offset_top = 6.0
offset_right = 320.0
offset_bottom = 199.0

[node name="Coins" parent="Container" instance=ExtResource("8_n1i8u")]
visible = false
offset_left = 1.0
offset_top = 177.0
offset_right = 41.0
offset_bottom = 217.0

[node name="Update" type="Control" parent="Container"]
visible = false
anchors_preset = 0
offset_right = 325.0
offset_bottom = 206.0

[node name="ContainerArms" type="Panel" parent="Container/Update"]
layout_mode = 0
offset_top = 50.0
offset_right = 326.0
offset_bottom = 96.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2hf14")

[node name="ActualArm" type="Sprite2D" parent="Container/Update/ContainerArms"]
position = Vector2(109, 23)
scale = Vector2(3.33333, 3.83333)
texture = ExtResource("8_c0l5p")

[node name="Arm" type="Sprite2D" parent="Container/Update/ContainerArms/ActualArm"]
position = Vector2(6.30001, 3.85511)
scale = Vector2(0.750001, 0.471016)
texture = ExtResource("8_dr33g")
hframes = 8
vframes = 8
frame = 12

[node name="ActualShield" type="Sprite2D" parent="Container/Update/ContainerArms"]
position = Vector2(61, 22)
scale = Vector2(3.33333, 3.83333)
texture = ExtResource("8_c0l5p")

[node name="Arm" type="Sprite2D" parent="Container/Update/ContainerArms/ActualShield"]
position = Vector2(-1.2, -1.56522)
scale = Vector2(0.750001, 0.471016)
texture = ExtResource("10_2orem")
hframes = 8
vframes = 8
frame = 32

[node name="NextLevelArm" type="Sprite2D" parent="Container/Update/ContainerArms"]
position = Vector2(215, 23)
scale = Vector2(3.33333, 3.83333)
texture = ExtResource("8_c0l5p")

[node name="Arm" type="Sprite2D" parent="Container/Update/ContainerArms/NextLevelArm"]
position = Vector2(6.30001, 3.85511)
scale = Vector2(0.750001, 0.471016)
hframes = 8
vframes = 8
frame = 12

[node name="NextLevelShield" type="Sprite2D" parent="Container/Update/ContainerArms"]
position = Vector2(262, 23)
scale = Vector2(3.33333, 3.83333)
texture = ExtResource("8_c0l5p")

[node name="Arm" type="Sprite2D" parent="Container/Update/ContainerArms/NextLevelShield"]
position = Vector2(-0.599997, -2.08696)
scale = Vector2(0.750001, 0.471016)
texture = ExtResource("11_uy8d1")
hframes = 8
vframes = 8
frame = 32

[node name="TextureRect" type="TextureRect" parent="Container/Update/ContainerArms"]
layout_mode = 0
offset_left = 149.0
offset_top = 14.0
offset_right = 174.0
offset_bottom = 33.0
texture = ExtResource("10_2bjjs")
expand_mode = 1

[node name="UptadeClick" type="TextureButton" parent="Container/Update"]
layout_mode = 0
offset_left = 142.0
offset_top = 110.0
offset_right = 180.0
offset_bottom = 142.0
texture_normal = ExtResource("10_vlkxo")
stretch_mode = 0

[node name="Anvil" type="Label" parent="Container/Update"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 326.0
offset_bottom = 30.0
text = "ANVIL"
label_settings = SubResource("LabelSettings_qlgqn")
horizontal_alignment = 1

[node name="Level" type="Label" parent="Container/Update"]
layout_mode = 0
offset_top = 145.0
offset_right = 326.0
offset_bottom = 168.0
text = "UPGRADE LV 2"
label_settings = SubResource("LabelSettings_lw6mx")
horizontal_alignment = 1

[node name="Alert" type="Label" parent="Container/Update"]
layout_mode = 0
offset_left = -1.0
offset_top = 163.0
offset_right = 325.0
offset_bottom = 186.0
label_settings = SubResource("LabelSettings_36vvr")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Container"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 14.0
offset_bottom = 13.0
icon = ExtResource("6_h2o4l")
flat = true
expand_icon = true

[connection signal="pressed" from="Container/Weapons/Arm/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Container/Weapons/Arm/Button" to="." method="_on_band_2_on_pressed"]
[connection signal="pressed" from="Container/Buttons/weaponsOption" to="." method="_on_weapons_pressed"]
[connection signal="pressed" from="Container/Buttons/Build" to="." method="_on_build_pressed"]
[connection signal="pressed" from="Container/Buttons/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Container/Buttons/Update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="Container/Update/UptadeClick" to="." method="_on_uptade_click_pressed"]
[connection signal="pressed" from="Container/BackButton" to="." method="_on_back_button_pressed"]
